--- a/acmi-audio-guide.nuspec
+++ b/acmi-audio-guide.nuspec
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>StaticMuseumAudioGuide</id>
-    <title>Static Museum Audio Guide</title>
+    <id>LusailMuseumAudioGuide</id>
+    <title>Lusail Museum Audio Guide</title>
     <version>1.0.0</version>
-    <authors>ACMI</authors>
+    <authors>LM</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A Jekyll theme for building lightweight static audio guides.</description>
+    <description>A prototype audio guide for Lusail Museum.</description>
   </metadata>
   <files>
     <file src="_site\**\*.*" target="build" />
